update partial trained model

--- a/basic_seq2seq.ipynb
+++ b/basic_seq2seq.ipynb
@@ -170,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -901,7 +903,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -10678,7 +10682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10686,7 +10690,7 @@
     "# Number of Epochs\n",
     "epochs = 60\n",
     "# Batch Size\n",
-    "batch_size = 128\n",
+    "batch_size = 20\n",
     "# RNN Size\n",
     "rnn_size = 50\n",
     "# Number of Layers\n",
@@ -10695,7 +10699,7 @@
     "encoding_embedding_size = 10\n",
     "decoding_embedding_size = 2000\n",
     "# Learning Rate\n",
-    "learning_rate = 0.001"
+    "learning_rate = 0.01"
    ]
   },
   {
@@ -10707,7 +10711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10763,7 +10767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10781,7 +10785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10825,7 +10829,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   1/60 Batch    0/402 - Training Loss:  4.619  - Validation loss:  4.529\n"
+      "Epoch   1/60 Batch    0/2581 - Training Loss:  4.568  - Validation loss:  4.194\n",
+      "Epoch   1/60 Batch   50/2581 - Training Loss:  3.210  - Validation loss:  3.369\n",
+      "Epoch   1/60 Batch  100/2581 - Training Loss:  3.144  - Validation loss:  3.340\n",
+      "Epoch   1/60 Batch  150/2581 - Training Loss:  3.212  - Validation loss:  3.358\n",
+      "Epoch   1/60 Batch  200/2581 - Training Loss:  3.275  - Validation loss:  3.340\n",
+      "Epoch   1/60 Batch  250/2581 - Training Loss:  3.199  - Validation loss:  3.347\n",
+      "Epoch   1/60 Batch  300/2581 - Training Loss:  3.223  - Validation loss:  3.360\n",
+      "Epoch   1/60 Batch  350/2581 - Training Loss:  3.188  - Validation loss:  3.357\n",
+      "Epoch   1/60 Batch  400/2581 - Training Loss:  3.160  - Validation loss:  3.361\n",
+      "Epoch   1/60 Batch  450/2581 - Training Loss:  3.192  - Validation loss:  3.352\n",
+      "Epoch   1/60 Batch  500/2581 - Training Loss:  3.185  - Validation loss:  3.347\n",
+      "Epoch   1/60 Batch  550/2581 - Training Loss:  3.214  - Validation loss:  3.334\n",
+      "Epoch   1/60 Batch  600/2581 - Training Loss:  3.204  - Validation loss:  3.352\n",
+      "Epoch   1/60 Batch  650/2581 - Training Loss:  3.215  - Validation loss:  3.346\n",
+      "Epoch   1/60 Batch  700/2581 - Training Loss:  3.202  - Validation loss:  3.369\n",
+      "Epoch   1/60 Batch  750/2581 - Training Loss:  3.240  - Validation loss:  3.357\n",
+      "Epoch   1/60 Batch  800/2581 - Training Loss:  3.207  - Validation loss:  3.349\n",
+      "Epoch   1/60 Batch  850/2581 - Training Loss:  3.207  - Validation loss:  3.345\n",
+      "Epoch   1/60 Batch  900/2581 - Training Loss:  3.240  - Validation loss:  3.358\n",
+      "Epoch   1/60 Batch  950/2581 - Training Loss:  3.172  - Validation loss:  3.352\n",
+      "Epoch   1/60 Batch 1000/2581 - Training Loss:  3.249  - Validation loss:  3.333\n",
+      "Epoch   1/60 Batch 1050/2581 - Training Loss:  3.211  - Validation loss:  3.368\n",
+      "Epoch   1/60 Batch 1100/2581 - Training Loss:  3.244  - Validation loss:  3.339\n",
+      "Epoch   1/60 Batch 1150/2581 - Training Loss:  3.166  - Validation loss:  3.354\n",
+      "Epoch   1/60 Batch 1200/2581 - Training Loss:  3.245  - Validation loss:  3.338\n",
+      "Epoch   1/60 Batch 1250/2581 - Training Loss:  3.120  - Validation loss:  3.351\n",
+      "Epoch   1/60 Batch 1300/2581 - Training Loss:  3.217  - Validation loss:  3.349\n",
+      "Epoch   1/60 Batch 1350/2581 - Training Loss:  3.225  - Validation loss:  3.340\n",
+      "Epoch   1/60 Batch 1400/2581 - Training Loss:  3.187  - Validation loss:  3.332\n",
+      "Epoch   1/60 Batch 1450/2581 - Training Loss:  3.179  - Validation loss:  3.357\n",
+      "Epoch   1/60 Batch 1500/2581 - Training Loss:  3.164  - Validation loss:  3.341\n"
      ]
     }
    ],
@@ -10948,6 +10982,20 @@
     "print('  Word index:       {}'.format([i for i in answer_logits if i != pad]))\n",
     "print('  Response Words: {}'.format(\" \".join([target_int_to_letter[i] for i in answer_logits if i != pad])))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
